--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,23 @@
 language: R
 sudo: false
 cache: packages
+# safelist
+branches:
+  only:
+  - dev
 
 after_success:
   - Rscript -e 'devtools::install_github("eliocamp/ggnewscale")'
+  - git config user.email "travis@travis.org"
+  - git config user.name "travis" # this email and name can be set anything you like
+  - git add -A
+  - git commit --allow-empty -m "travis -- push from dev"
+  - git push https://eliocamp:${GITHUB_API_KEY}@${GH_REF} HEAD:master  #clownvary is my username on github, you need to use yourself , do not use travis or others.
 
 before_cache: Rscript -e 'remotes::install_cran("pkgdown")'
 deploy:
   provider: script
   script: Rscript -e 'pkgdown::deploy_site_github()'
   skip_cleanup: true
+
+
