--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,12 @@ after_success:
   - Rscript -e 'devtools::install_github("eliocamp/ggnewscale")'
   - git config user.email "travis@travis.org"
   - git config user.name "travis" # this email and name can be set anything you like
-  - git add -A
+  - git checkout master
+  - git add *
   - git commit --allow-empty -m "travis -- push from dev"
-  - git push http://eliocamp:${GITHUB_API_KEY}@${GH_REF} HEAD:master  #clownvary is my username on github, you need to use yourself , do not use travis or others.
+  - git remote rm origin
+  - git remote add origin https://eliocamp:${GH_TOKEN}@github.com/eliocamp/ggnewscale.git > /dev/null 2>&1
+  - git push origin master --quiet
 
 before_cache: Rscript -e 'remotes::install_cran("pkgdown")'
 deploy:
