--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ after_success:
   - git checkout master
   - git add -A
   - git remote rm origin
-  - git remote add origin http://eliocamp:${GH_TOKEN}@github.com/eliocamp/ggnewscale.git > /dev/null 2>&1
+  - git remote add origin https://eliocamp:${GITHUB_API_KEY}@github.com/eliocamp/ggnewscale.git > /dev/null 2>&1
   - git commit -m "travis -- push from dev"
   - git push origin master --quiet
 
