--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,9 @@ after_success:
   - Rscript -e 'devtools::install_github("eliocamp/ggnewscale")'
   - git config user.email "travis@travis.org"
   - git config user.name "travis" # this email and name can be set anything you like
-  - git checkout master
   - git add -A
-  - git remote rm origin
-  - git remote add origin https://eliocamp:${GITHUB_API_KEY}@github.com/eliocamp/ggnewscale.git > /dev/null 2>&1
-  - git commit -m "travis -- push from dev"
-  - git push origin master --quiet
+  - git commit --allow-empty -m "travis -- push from dev"
+  - git push https://eliocamp:${GITHUB_API_KEY}@${GH_REF} HEAD:master
 
 before_cache: Rscript -e 'remotes::install_cran("pkgdown")'
 deploy:
