--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,11 @@ after_success:
   - git config user.email "travis@travis.org"
   - git config user.name "travis" # this email and name can be set anything you like
   - git add -A
-  - git commit --allow-empty -m "travis -- push from dev"
-  - git push https://eliocamp:${GITHUB_API_KEY}@${GH_REF} HEAD:master
+  - git commit --allow-empty -m "travis -- push from dev" -m "[skip ci]"
+  - git remote rm origin
+  - git remote add origin https://eliocamp:${GITHUB_API_KEY}@github.com/eliocamp/ggnewscale.git > /dev/null 2>&1
+  - git push origin master --quiet
+
 
 before_cache: Rscript -e 'remotes::install_cran("pkgdown")'
 deploy:
