--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,7 @@ cache: packages
 
 after_success:
   - Rscript -e 'devtools::install_github("eliocamp/ggnewscale")'
-  - git config user.email "travis@travis.org"
-  - git config user.name "travis" # this email and name can be set anything you like
-  - git remote rm origin
-  - git remote add origin https://eliocamp:${GITHUB_API_KEY}@github.com/eliocamp/ggnewscale.git > /dev/null 2>&1
-  - git add -A
-  - git commit --allow-empty -m "travis -- push from dev" -m "[skip ci]"
-  - git push origin master --quiet
+  - .travis_push.sh
 
 
 before_cache: Rscript -e 'remotes::install_cran("pkgdown")'
