--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ after_success:
   - chmod 600 .travis/deploy_key.pem # this key should have push access
   - ssh-add .travis/deploy_key.pem
   - git remote add deploy git@github.com:eliocamp/ggnewscale.git
-  - git push deploy
+  - git push deploy HEAD:master
 
 
 
